--- a/css/globals/base.css
+++ b/css/globals/base.css
@@ -5,7 +5,9 @@ html, body {
 }
 
 body {
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
+    background-color: #5F93C0;
+
     color: #0E0E0E;
     ;
 }
